--- a/res/layout/activity_location.xml
+++ b/res/layout/activity_location.xml
@@ -71,5 +71,22 @@
         app:layout_constraintHorizontal_bias="0.022"
         app:layout_constraintVertical_bias="0.985" />
 
+    <ImageView
+        android:id="@+id/star"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/map"
+        app:layout_constraintHorizontal_bias="0.932"
+        app:layout_constraintStart_toStartOf="@+id/map"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.227"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
+
 
 </android.support.constraint.ConstraintLayout>
